# trim-reaper

./: .gitignore  README.md  app.py  install.sh  install_gpu.sh  pyproject.toml  requirements.txt  run.py
src/: config.py
src/modules/: __init__.py  ai_integration.py  speaker_tracker.py  subject_detector.py  transcription.py  video_downloader.py  video_processor.py  viral_detector.py
src/modules/speaker_tracker/: models.py  speaker_tracker.py
src/utils/: __init__.py  gpu_config.py
